# mio-serial

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test-push-and-pr.yml
examples/: serial_printline.rs  tokio.rs
src/: lib.rs  unix.rs
src/unix/: tokio.rs
tests/: test_unix.rs
