[package]
name = "mio-serial"
version = "3.3.1"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for mio"
license = "MIT"
homepage = "https://github.com/berkowski/mio-serial"
repository = "https://github.com/berkowski/mio-serial"
documentation = "http://docs.rs/mio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "mio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/mio-serial", service = "github" }
travis-ci = { repository = "berkowski/mio-serial", service = "github" }

[features]
default = ["libudev"]
libudev = ["serialport/libudev"]
tokio = ["tokio_crate", "futures"]

[dependencies]
futures = { version = "0.3", optional = true }
mio = {version = "^0.7", features = ["os-ext"] }
serialport = { version = "4", default-features = false }
tokio_crate = { package = "tokio", version = "1", features = ["net"], default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["commapi", "handleapi", "winbase"] }
mio-named-pipes = "0.1.5"

[[example]]
name = "serial_printline"
path = "examples/serial_printline.rs"

[package.metadata.docs.rs]
features = ["tokio"]
