[package]
name = "serial-io"
version = "0.3.0"
authors = ["Mario Reder <mario.reder@pm.me>", "Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation"
license = "MIT"
homepage = "https://github.com/tarnadas/serial-io-rs"
repository = "https://github.com/tarnadas/serial-io-rs"
documentation = "http://docs.rs/serial-io"
readme = "README.md"
keywords = ["rs232", "serial", "mio", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[features]
default = ["libudev"]
libudev = ["serialport/libudev"]
tokio = ["tokio_crate", "futures"]

[dependencies]
futures = { version = "0.3", optional = true }
mio = {version = "^0.7", features = ["os-ext"] }
serialport = { version = "4", default-features = false }
tokio_crate = { package = "tokio", version = "1", features = ["net"], default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["commapi", "handleapi", "winbase"] }
mio-named-pipes = "0.1.5"

[dev-dependencies]
bytes = "1"
tokio_crate = { package = "tokio", version = "1", features = ["macros", "rt"] }
tokio-util = { version = "0.6", features = ["codec"] }

[[example]]
name = "serial_printline"
path = "examples/serial_printline.rs"

[[example]]
name = "tokio"
path = "examples/tokio.rs"
required-features = ["tokio"]

[package.metadata.docs.rs]
features = ["tokio"]
